--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ boto3
 bs4
 docopt
 faiss-cpu
+google-api-python-client
 pdfplumber
 python-dotenv
 langchain
 langchain_core
 langchain_community
+langchain_experimental
 langchain_openai
 langchain_groq
 langsmith
 rich
+trafilatura
