--- a/dotenv.sample
+++ b/dotenv.sample
@@ -1,10 +1,18 @@
-
-OPENAI_API_KEY=sk-XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-ANTHROPIC_API_KEY=sk-ant-api03-XXXXXXXXXXXXXXXXXXX
-GROQ_API_KEY=gsk_XXXXXXXXXXXXXXXXXXXXXXXX
-CREDENTIALS_PROFILE_NAME=XXXXXXXXXXXXXXXX
-
-LANGCHAIN_API_KEY=ls__XXXXXXXXXXXXXXXXXXXXXXXXXX
+LANGCHAIN_API_KEY=ls__XXXXXXXXXXXXXXXXXXX
 LANGCHAIN_TRACING_V2=true
+LANGCHAIN_PROJECT="search agent"
+LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
 
-BRAVE_SEARCH_API_KEY=BSXXXXXXXXXXXXXXXX
+
+OPENAI_API_KEY=sk-XXXXXXXXXXXXXXXXXXX
+ANTHROPIC_API_KEY=sk-ant-api03-XXXXXXXXXXXXXXXXXXX
+GROQ_API_KEY=gsk_XXXXXXXXXXXXXXXXXXX
+CREDENTIALS_PROFILE_NAME=XXXXXXXXXXXXXXXXXXX
+COHERE_API_KEY=XXXXXXXXXXXXXXXXXXX
+TAVILY_API_KEY=tvly-XXXXXXXXXXXXXXXXXXX
+BRAVE_SEARCH_API_KEY=XXXXXXXXXXXXXXXXXXX
+SERPER_API_KEY=XXXXXXXXXXXXXXXXXXX
+SERPAPI_API_KEY=XXXXXXXXXXXXXXXXXXX
+WOLFRAM_ALPHA_APPID=XXXXXXXXXXXXXXXXXXX
+GOOGLE_CSE_ID=XXXXXXXXXXXXXXXXXXX
+GOOGLE_API_KEY=XXXXXXXXXXXXXXXXXXX
