Added Firework.ai as provider. Better streamlit ui.

--- a/dotenv.sample
+++ b/dotenv.sample
@@ -6,6 +6,7 @@ LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
 
 OPENAI_API_KEY=sk-XXXXXXXXXXXXXXXXXXX
 ANTHROPIC_API_KEY=sk-ant-api03-XXXXXXXXXXXXXXXXXXX
+FIREWORKS_API_KEY=XXXXXXXXXXXXXXXXXXX
 GROQ_API_KEY=gsk_XXXXXXXXXXXXXXXXXXX
 CREDENTIALS_PROFILE_NAME=XXXXXXXXXXXXXXXXXXX
 COHERE_API_KEY=XXXXXXXXXXXXXXXXXXX
