--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ langchain
 langchain-aws
 langchain-fireworks
 langchain_core
+langchain_cohere
 langchain_community
 langchain_experimental
 langchain_openai
