--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ langchain_experimental
 langchain_openai
 langchain-ollama
 langchain_groq
+langchain-google-genai
+langchain-together
 langsmith
 schema
 streamlit
