--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ cohere
 docopt
 faiss-cpu
 google-api-python-client
-pdfplumber
-python-dotenv
+pdfplumber >= 0.11.4
+python-dotenv >= 1.0.1
 langchain >= 0.3.0
 langchain-aws >= 0.2.0
 langchain-fireworks
