--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,15 @@ boto3 >= 1.34.162
 bs4
 chromedriver-py
 cohere
-docopt
+docopt >= 0.6.2
 faiss-cpu >= 1.8.0
-google-api-python-client
+google-api-python-client >= 2.145.0
 pdfplumber >= 0.11.4
 python-dotenv >= 1.0.1
 langchain >= 0.3.0
 langchain-aws >= 0.2.0
 langchain-fireworks
-langchain_core
+langchain_core >= 0.3.0
 langchain-cohere
 langchain_community
 langchain_experimental
@@ -23,10 +23,10 @@ langchain-together
 langsmith
 lxml[html_clean]
 schema
-streamlit
+streamlit >= 1.38.0
 selenium
 tiktoken
-transformers
-rich
+transformers >= 4.44.2
+rich >= 13.8.1
 trafilatura
 watchdog
