--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ anthropic
 boto3 >= 1.34.162
 bs4
 chromedriver-py
-cohere
+cohere >= 5.9.2
 docopt >= 0.6.2
 faiss-cpu >= 1.8.0
 google-api-python-client >= 2.145.0
@@ -21,12 +21,12 @@ langchain_groq
 langchain-google-genai
 langchain-together
 langsmith
-lxml[html_clean]
+lxml[html_clean] >= 5.3.0
 schema
 streamlit >= 1.38.0
 selenium
 tiktoken
 transformers >= 4.44.2
 rich >= 13.8.1
-trafilatura
-watchdog
+trafilatura >= 1.12.2
+watchdog >= 5.0.2
