--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 anthropic
 boto3 >= 1.34.162
 bs4
-chromedriver-py
+chromedriver-py >= 128.0.6613.137
 cohere >= 5.9.2
 docopt >= 0.6.2
 faiss-cpu >= 1.8.0
