--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,8 @@ langchain_groq
 langchain-google-genai
 langchain-together
 langsmith
-lxml[html_clean] >= 5.3.0
+lxml >= 5.3.0
+lxml_html_clean >= 0.2.2
 schema
 streamlit >= 1.38.0
 selenium
