--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,21 @@ boto3 >= 1.34.131, < 1.35.0
 bs4
 chromedriver-py >= 128.0.6613.137
 cohere >= 5.9.2
-docopt >= 0.6.2
+docopt
 faiss-cpu >= 1.8.0
 google-api-python-client >= 2.145.0
 pdfplumber >= 0.11.4
 python-dotenv >= 1.0.1
 langchain >= 0.3.0
+langchain_anthropic
 langchain-aws >= 0.2.0
 langchain-fireworks
 langchain_core >= 0.3.0
 langchain-cohere
 langchain_community
 langchain_experimental
+langchain_huggingface
+langchain_mistralai
 langchain_openai
 langchain-ollama
 langchain_groq
